create github pages

--- a/page6.html
+++ b/page6.html
@@ -42,28 +42,17 @@
                          <img src="assets/images/logo2.png" alt="Mobirise" style="height: 3.8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap">
-                    <a class="navbar-caption text-white display-4" href="https://mobirise.com">
-                        MOBIRISE
-                    </a>
-                </span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="https://mobirise.com">2014A7TS0102U</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true">
-                <li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="https://mobirise.com">
-                        <span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>
-                        Services
-                    </a>
+            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
+                    <a class="nav-link link text-white display-4" href="https://mobirise.com">COMPUTER SCIENCE</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link link text-white display-4" href="https://mobirise.com">
-                        <span class="mbri-search mbr-iconfont mbr-iconfont-btn"></span>
-                        About Us
-                    </a>
-                </li>
-            </ul>
+                        </a>
+                </li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="index.html">
                     
                     HOME</a></div>
@@ -71,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/k">develop your own website</a></section><section class="header5 cid-qQjexRM7lx mbr-fullscreen" id="header5-w">
+<section class="engine"><a href="https://mobirise.me/h">how to create a web page</a></section><section class="header5 cid-qQjexRM7lx mbr-fullscreen" id="header5-w">
 
     
 
@@ -80,8 +69,8 @@
         <div class="row justify-content-center">
             <div class="mbr-white col-md-10">
                 <h1 class="mbr-section-title align-center pb-3 mbr-fonts-style display-1"></h1>
-                <p class="mbr-text align-center display-5 pb-3 mbr-fonts-style display-1">Courses Related Links&nbsp;</p>
-                <div class="mbr-section-btn align-center"><a class="btn btn-md btn-secondary display-4" href="https://en.wikipedia.org/wiki/Data_mining">Data Mining</a> <a class="btn btn-md btn-secondary display-4" href="https://en.wikipedia.org/wiki/Operating_system">Operating Systems</a> <a class="btn btn-md btn-secondary display-4" href="https://en.wikipedia.org/wiki/Number_theory">Number Theory</a> <a class="btn btn-md btn-secondary display-4" href="https://en.wikipedia.org/wiki/Information_retrieval">Information Retrieval</a> <a class="btn btn-md btn-secondary display-4" href="https://en.wikipedia.org/wiki/Symbolic_logic">Symbolic Logic</a> <a class="btn btn-md btn-secondary display-4" href="https://en.wikipedia.org/wiki/Artificial_intelligence">Artificial Intelligence</a></div>
+                <p class="mbr-text align-center display-5 pb-3 mbr-fonts-style"><strong>Courses Related Links&nbsp;</strong></p>
+                <div class="mbr-section-btn align-center"><a class="btn btn-md btn-primary-outline display-4" href="https://en.wikipedia.org/wiki/Data_mining">Data Mining</a> <a class="btn btn-md btn-primary-outline display-4" href="https://en.wikipedia.org/wiki/Operating_system">Operating Systems</a> <a class="btn btn-md btn-primary-outline display-4" href="https://en.wikipedia.org/wiki/Number_theory">Number Theory</a> <a class="btn btn-md btn-primary-outline display-4" href="https://en.wikipedia.org/wiki/Information_retrieval">Information Retrieval</a> <a class="btn btn-md btn-primary-outline display-4" href="https://en.wikipedia.org/wiki/Symbolic_logic">Symbolic Logic</a> <a class="btn btn-md btn-primary-outline display-4" href="https://en.wikipedia.org/wiki/Artificial_intelligence">Artificial Intelligence</a></div>
             </div>
         </div>
     </div>
