--- a/page3.html
+++ b/page3.html
@@ -42,28 +42,17 @@
                          <img src="assets/images/logo2.png" alt="Mobirise" style="height: 3.8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap">
-                    <a class="navbar-caption text-white display-4" href="https://mobirise.com">
-                        MOBIRISE
-                    </a>
-                </span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="https://mobirise.com">2014A7TS0102U</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true">
-                <li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="https://mobirise.com">
-                        <span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>
-                        Services
-                    </a>
+            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
+                    <a class="nav-link link text-white display-4" href="https://mobirise.com">COMPUTER SCIENCE</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link link text-white display-4" href="https://mobirise.com">
-                        <span class="mbri-search mbr-iconfont mbr-iconfont-btn"></span>
-                        About Us
-                    </a>
-                </li>
-            </ul>
+                        </a>
+                </li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="index.html">
                     
                     HOME</a></div>
@@ -71,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/v">free html templates</a></section><section class="header5 cid-qQjdkr8yC0 mbr-fullscreen" id="header5-r">
+<section class="engine"><a href="https://mobirise.me/f">simple web builder</a></section><section class="header5 cid-qQjdkr8yC0 mbr-fullscreen" id="header5-r">
 
     
 
@@ -79,12 +68,10 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="mbr-white col-md-10">
-                <h1 class="mbr-section-title align-center pb-3 mbr-fonts-style display-1">
-                    External Links</h1>
-                <p class="mbr-text align-center display-5 pb-3 mbr-fonts-style">
-                   Full screen intro with gradient background color. Click blue 'Gear' icon in the top right corner to hide/show buttons, text, title and change the block background. Click red '+' in the bottom right corner to add a new block. Use the top left menu to create new pages, sites and add themes.
-                </p>
-                <div class="mbr-section-btn align-center"><a class="btn btn-md btn-secondary display-4" href="page5.html">Project References</a> <a class="btn btn-md btn-secondary display-4" href="page6.html">Wikipedia</a></div>
+                <h1 class="mbr-section-title align-center pb-3 mbr-fonts-style display-1"><strong>
+                    External Links</strong></h1>
+                <p class="mbr-text align-center display-5 pb-3 mbr-fonts-style"></p>
+                <div class="mbr-section-btn align-center"><a class="btn btn-md btn-primary-outline display-4" href="page5.html">Project References</a> <a class="btn btn-md btn-primary-outline display-4" href="page6.html">Wikipedia</a></div>
             </div>
         </div>
     </div>
