--- a/page5.html
+++ b/page5.html
@@ -42,28 +42,17 @@
                          <img src="assets/images/logo2.png" alt="Mobirise" style="height: 3.8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap">
-                    <a class="navbar-caption text-white display-4" href="https://mobirise.com">
-                        MOBIRISE
-                    </a>
-                </span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="https://mobirise.com">2014A7TS0102U</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true">
-                <li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="https://mobirise.com">
-                        <span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>
-                        Services
-                    </a>
+            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
+                    <a class="nav-link link text-white display-4" href="https://mobirise.com">COMPUTER SCIENCE</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link link text-white display-4" href="https://mobirise.com">
-                        <span class="mbri-search mbr-iconfont mbr-iconfont-btn"></span>
-                        About Us
-                    </a>
-                </li>
-            </ul>
+                        </a>
+                </li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="index.html">
                     
                     HOME</a></div>
@@ -71,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/j">website templates</a></section><section class="header5 cid-qQje8xRIMN mbr-fullscreen" id="header5-v">
+<section class="engine"><a href="https://mobirise.me/v">html templates</a></section><section class="header5 cid-qQje8xRIMN mbr-fullscreen" id="header5-v">
 
     
 
@@ -79,10 +68,10 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="mbr-white col-md-10">
-                <h1 class="mbr-section-title align-center pb-3 mbr-fonts-style display-1">
-                    Project Links</h1>
+                <h1 class="mbr-section-title align-center pb-3 mbr-fonts-style display-1"><strong>
+                    Project Links</strong></h1>
                 <p class="mbr-text align-center display-5 pb-3 mbr-fonts-style"></p>
-                <div class="mbr-section-btn align-center"><a class="btn btn-md btn-secondary display-4" href="http://www.citeulike.org/group/14583/article/4204050">Google Scholar</a> <a class="btn btn-md btn-secondary display-4" href="https://ieeexplore.ieee.org/abstract/document/112826/">IEEE</a> <a class="btn btn-md btn-secondary display-4" href="https://www.degruyter.com/view/j/ijnsns.2010.11.s1/ijnsns.2010.11.s1.305/ijnsns.2010.11.s1.305.xml">Other Sources</a></div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-md btn-primary-outline display-4" href="http://www.citeulike.org/group/14583/article/4204050">Google Scholar</a> <a class="btn btn-md btn-primary-outline display-4" href="https://ieeexplore.ieee.org/abstract/document/112826/">IEEE</a> <a class="btn btn-md btn-primary-outline display-4" href="https://www.degruyter.com/view/j/ijnsns.2010.11.s1/ijnsns.2010.11.s1.305/ijnsns.2010.11.s1.305.xml">Other Sources</a></div>
             </div>
         </div>
     </div>
