--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="https://mobirise.com">COMPUTER SCIENCE</a>
-                </li>
+                    <a class="nav-link link text-white display-4" href="https://mobirise.com">piyush.batra11@gmail.com</a>
+                </li><li class="nav-item"><a class="nav-link link text-white display-4" href="https://mobirise.com">COMPUTER SCIENCE</a></li>
                 <li class="nav-item">
                     <a class="nav-link link text-white display-4" href="https://mobirise.com">
                         </a>
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/z">best free html templates</a></section><section class="header12 cid-qQj9yDId1u mbr-fullscreen" id="header12-o">
+<section class="engine"><a href="https://mobirise.me/g">how to build a site for free</a></section><section class="header12 cid-qQj9yDId1u mbr-fullscreen" id="header12-o">
 
     
 
