--- a/page4.html
+++ b/page4.html
@@ -47,8 +47,8 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="https://mobirise.com">COMPUTER SCIENCE</a>
-                </li>
+                    <a class="nav-link link text-white display-4" href="https://mobirise.com">piyush.batra11@gmail.com</a>
+                </li><li class="nav-item"><a class="nav-link link text-white display-4" href="https://mobirise.com">COMPUTER SCIENCE</a></li>
                 <li class="nav-item">
                     <a class="nav-link link text-white display-4" href="https://mobirise.com">
                         </a>
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/t">free amp templates</a></section><section class="header5 cid-qQje8xRIMN mbr-fullscreen" id="header5-v">
+<section class="engine"><a href="https://mobirise.me/a">Mobirise review</a></section><section class="header5 cid-qQje8xRIMN mbr-fullscreen" id="header5-v">
 
     
 
