--- a/page5.html
+++ b/page5.html
@@ -47,8 +47,8 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="https://mobirise.com">COMPUTER SCIENCE</a>
-                </li>
+                    <a class="nav-link link text-white display-4" href="https://mobirise.com">piyush.batra11@gmail.com</a>
+                </li><li class="nav-item"><a class="nav-link link text-white display-4" href="https://mobirise.com">COMPUTER SCIENCE</a></li>
                 <li class="nav-item">
                     <a class="nav-link link text-white display-4" href="https://mobirise.com">
                         </a>
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/x">css templates</a></section><section class="header5 cid-qQjexRM7lx mbr-fullscreen" id="header5-w">
+<section class="engine"><a href="https://mobirise.me/a">Mobirise alternative</a></section><section class="header5 cid-qQjexRM7lx mbr-fullscreen" id="header5-w">
 
     
 
@@ -69,7 +69,7 @@
         <div class="row justify-content-center">
             <div class="mbr-white col-md-10">
                 <h1 class="mbr-section-title align-center pb-3 mbr-fonts-style display-1"></h1>
-                <p class="mbr-text align-center display-5 pb-3 mbr-fonts-style"><strong>Courses Related Links&nbsp;</strong></p>
+                <p class="mbr-text align-center display-5 pb-3 mbr-fonts-style display-1"><strong>Courses Related Links&nbsp;</strong></p>
                 <div class="mbr-section-btn align-center"><a class="btn btn-md btn-primary-outline display-4" href="https://en.wikipedia.org/wiki/Data_mining">Data Mining</a> <a class="btn btn-md btn-primary-outline display-4" href="https://en.wikipedia.org/wiki/Operating_system">Operating Systems</a> <a class="btn btn-md btn-primary-outline display-4" href="https://en.wikipedia.org/wiki/Number_theory">Number Theory</a> <a class="btn btn-md btn-primary-outline display-4" href="https://en.wikipedia.org/wiki/Information_retrieval">Information Retrieval</a> <a class="btn btn-md btn-primary-outline display-4" href="https://en.wikipedia.org/wiki/Symbolic_logic">Symbolic Logic</a> <a class="btn btn-md btn-primary-outline display-4" href="https://en.wikipedia.org/wiki/Artificial_intelligence">Artificial Intelligence</a></div>
             </div>
         </div>
