create github pages

--- a/page1.html
+++ b/page1.html
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/k">develop own website</a></section><section class="header5 cid-qQjaOBIlui mbr-fullscreen" id="header5-p">
+<section class="engine"><a href="https://mobirise.me/l">free site templates</a></section><section class="header5 cid-qQjaOBIlui mbr-fullscreen" id="header5-p">
 
     
 
