create github pages

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/i">free website creation software</a></section><section class="header12 cid-qQj9yDId1u mbr-fullscreen" id="header12-o">
+<section class="engine"><a href="https://mobirise.me/u">bootstrap html templates</a></section><section class="header12 cid-qQj9yDId1u mbr-fullscreen" id="header12-o">
 
     
 
@@ -88,7 +88,7 @@
                         <div class="card col-12 col-md-6 col-lg-4">
                             <div class="icon-block">
                             <a href="page1.html">
-                                <span class="mbr-iconfont mbri-edit"></span>
+                                <span class="mbr-iconfont mbri-edit" style="font-size: 50px; color: rgb(35, 35, 35);"></span>
                             </a>
                             </div>
                             <h5 class="mbr-fonts-style display-5">Courses</h5>
@@ -97,7 +97,7 @@
                         <div class="card col-12 col-md-6 col-lg-4">
                             <div class="icon-block">
                                 <a href="page2.html">
-                                    <span class="mbr-iconfont mbri-setting"></span>
+                                    <span class="mbr-iconfont mbri-setting" style="font-size: 50px; color: rgb(35, 35, 35);"></span>
                                 </a>
                             </div>
                             <h5 class="mbr-fonts-style display-5">Projects</h5>
@@ -106,7 +106,7 @@
                         <div class="card col-12 col-md-6 col-lg-4">
                             <div class="icon-block">
                                 <a href="page3.html">
-                                    <span class="mbr-iconfont mbri-info"></span>
+                                    <span class="mbr-iconfont mbri-info" style="font-size: 50px; color: rgb(35, 35, 35);"></span>
                                 </a>
                             </div>
                             <h5 class="mbr-fonts-style display-5">
