--- a/page1.html
+++ b/page1.html
@@ -71,7 +71,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/n">free landing page html templates</a></section><section class="header5 cid-qQjaOBIlui mbr-fullscreen" id="header5-p">
+<section class="engine"><a href="https://mobirise.me/i">free website creation software</a></section><section class="header5 cid-qQjaOBIlui mbr-fullscreen" id="header5-p">
 
     
 
@@ -79,8 +79,8 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="mbr-white col-md-10">
-                <h1 class="mbr-section-title align-center pb-3 mbr-fonts-style display-1"><strong><br></strong><strong>COURSES</strong></h1>
-                <p class="mbr-text align-center display-5 pb-3 mbr-fonts-style">Technical Report Writing<br>Electrical Sciences<br>Mathematics<br>Probability and Statistics<br>Mathematics II<br>Engineering Graphics<br>Computer Programming<br>Object Oriented Programming<br>Logic in Computer Science<br>Digital Design+Lab<br>Discrete Structure<br>Principles of Economics<br>Linguistics<br>Data Structures<br>Database Systems<br>Microprocessors<br>Operating Systems<br>Theory of computation<br>Principles of Programming Language<br>Data Mining<br>Compiler Construction<br>Computer Network<br>Operational Research<br>Design and analysis of algorithm<br>Artificial Intelligence<br>Symbolic Logic<br>Number Theory<br>Intro to Financial Math<br>Information Retrieval<br>Nanoscience<br><br></p>
+                <h1 class="mbr-section-title align-center pb-3 mbr-fonts-style display-1"><strong>COURSES</strong></h1>
+                <p class="mbr-text align-center display-5 pb-3 mbr-fonts-style">Technical Report Writing<br>Electrical Sciences<br>Mathematics<br>Probability and Statistics<br>Mathematics II<br>Engineering Graphics<br>Computer Programming<br>Object Oriented Programming<br>Logic in Computer Science<br>Digital Design+Lab<br>Discrete Structure<br>Principles of Economics<br>Linguistics<br>Data Structures<br>Database Systems<br>Microprocessors<br>Operating Systems<br>Theory of computation<br>Principles of Programming Language<br>Compiler Construction<br>Computer Network<br>Operational Research<br>Design and analysis of algorithm<br>Artificial Intelligence<br>Symbolic Logic<br>Number Theory<br>Intro to Financial Math<br>Information Retrieval<br>Nanoscience<br><br></p>
                 
             </div>
         </div>
