create github pages

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/u">bootstrap html templates</a></section><section class="header12 cid-qQj9yDId1u mbr-fullscreen" id="header12-o">
+<section class="engine"><a href="https://mobirise.me/t">free amp templates</a></section><section class="header12 cid-qQj9yDId1u mbr-fullscreen" id="header12-o">
 
     
 
